--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -4,33 +4,86 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/editProfileStyles.css" type="text/css" />
     <title>Document</title>
   </head>
   <body>
-    <%- include("partials/navbar") %>
-    <form
-      action="/user/mainProfile/<%= user.id %>/edit?_method=PATCH"
-      method="post"
-      enctype="multipart/form-data"
-    >
-      <label for="firstname">Firstname</label>
-      <input type="text" name="firstname" value="<%= user.firstname %>" />
-      <br /><br />
-      <label for="lastname">Lastname</label>
-      <input type="text" name="lastname" value="<%= user.lastname %>" />
-      <br /><br />
-      <label for="username">Username</label>
-      <input type="text" name="username" value="<%= user.username %>" />
-      <br /><br />
-      <label for="description">Description</label>
-      <input type="text" name="description" value="<%= user.description %>" />
-      <br /><br />
-      <img src="/img/<%= user.profileImg %> " alt="" />
-      <label for="profileImg">Profile Img</label>
-      <input type="file" name="profileImg" />
-      <br /><br />
-      <button type="submit">Submit Changes</button>
-    </form>
-    <%- include("partials/footer") %>
+    <button class="modalBtn">Modal</button>
+    <div class="editModalBg">
+      <div class="editModal p-3 border border-1 shadow rounded-3">
+        <button class="editModalCloseBtn btn btn-secondary">Close</button>
+        <br />
+        <form
+          action="/user/mainProfile/<%= user.id %>/edit?_method=PATCH"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          <button type="submit" class="btn btn-primary float-end">Submit Changes</button>
+          <br />
+          <div>
+            <img src="/img/<%= user.profileImg %> " alt="" width="50px" />
+            <label for="profileImg">Profile Img</label>
+            <input type="file" name="profileImg" />
+            <br />
+          </div>
+          <br />
+          <div class="form-floating">
+            <input
+              class="form-control text-secondary bg-white"
+              type="text"
+              name="firstname"
+              value="<%= user.firstname %>"
+              placeholder="firstname"
+            />
+            <label class="editLabels" for="firstname">Firstname</label>
+            <br />
+          </div>
+          <div class="form-floating">
+            <input
+              class="form-control text-secondary bg-white"
+              type="text"
+              name="lastname"
+              value="<%= user.lastname %>"
+              placeholder="lastname"
+            />
+            <label class="editLabels" for="lastname">Lastname</label>
+            <br />
+          </div>
+          <div class="form-floating">
+            <input
+              class="form-control text-secondary bg-white"
+              type="text"
+              name="username"
+              value="<%= user.username %>"
+              placeholder="username"
+            />
+            <label class="editLabels" for="username">Username</label>
+            <br />
+          </div>
+          <div class="form-floating">
+            <input
+              class="form-control text-secondary bg-white"
+              type="text"
+              name="description"
+              value="<%= user.description %>"
+              placeholder="email"
+            />
+            <label class="editLabels" for="description">Description</label>
+          </div>
+        </form>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/editProfileApp.js"></script>
   </body>
 </html>
