--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,49 +7,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/styles">
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
   <title>Document</title>
 </head>
 
 <body>
+  <!-- LOGIN MODAL -->
+  <div class="loginModalBg">
+    <div class="col loginModal p-3 border border-1 shadow rounded">
+      <h2>Ingresar</h2>
+      <br><br>
+      <form action="/login" method="post">
+        <div class="form-floating">
+          <input type="text" name="emailOrUsername" class="form-control text-white bg-transparent" id="emailOrUsername" placeholder="email"/>
+          <label for="emailOrUsername" class="registerLabels"> Email or Username </label>
+          <br /><br />
+        </div>
+        <div class="form-floating">
+          <input type="password" name="password" class="form-control text-white bg-transparent" id="password" placeholder="password"/>
+          <label for="password" class="registerLabels"> Password </label>
+          <br /><br />
+        </div>
+        <button type="submit" class="btn btn-primary rounded-pill px-5 fw-bold fs-5  float-end" name="login">Ingresar</button>
+      </form>
+      <button class="btn btn-secondary rounded-pill" id="buttonCloseLoginModal">Close</button>
+    </div>
+  </div>
+  <!-- REGISTER MODAL -->
+  <div class="registerModalBg">
+    <div class="col registerModal p-3 border border-1 shadow rounded">
+      <h2>Registrate</h2>
+      <br><br>
+      <form action="/users" method="post" >
+        <div class="form-floating">
+          <input type="text" name="firstname" class="form-control text-white bg-transparent" placeholder="firstname" id="firstname" />
+          <label for="firstname" class="registerLabels"> Firstname </label>
+          <br /><br />
+        </div>
+        <div class="form-floating">
+          <input type="text" name="lastname" class="form-control text-white bg-transparent" placeholder="lastname" id="lastname" />
+          <label for="lastname" class="registerLabels"> Lastname </label>
+          <br /><br />
+        </div>
+        <div class="form-floating">
+          <input type="text" name="username" class="form-control text-white bg-transparent" placeholder="username" id="username" />
+          <label for="username" class="registerLabels"> Username </label>
+          <br /><br />
+        </div>
+        <div class="form-floating">
+          <input type="text" name="email" class="form-control text-white bg-transparent" placeholder="email" id="email" />
+          <label for="email" class="registerLabels"> Email </label>
+          <br /><br />
+        </div>
+        <div class="form-floating">
+          <input type="password" name="password" class="form-control text-white bg-transparent" placeholder="password" id="password" />
+          <label for="password" class="registerLabels"> Password </label>
+          <br /><br />
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary rounded-pill px-5 fw-bold fs-5" name="register">Register</button>
+        </div>
+      </form>
+      <br>
+      <button class="btn btn-secondary rounded-pill float-end" id="buttonCloseRegisterModal">Close</button>
+    </div>
+  </div>
   <div class="container">
     <div class="row">
-      <button class="btn btn-primary rounded" id="buttonLoginModal">Log In</button>
-      <div class="loginModalBg">
-        <div class="col loginModal">
-          <h2>Login</h2>
-          <form action="/login" method="post">
-            <label for="emailOrUsername"> Email or Username </label>
-            <input type="text" name="emailOrUsername" class="form-control" id="emailOrUsername" />
-            <br /><br />
-            <label for="password"> Password </label>
-            <input type="password" name="password" class="form-control" id="password" />
-            <br /><br />
-            <button type="submit" class="btn btn-primary" name="login">Log In</button>
-            <button class="btn btn-secondary">Close</button>
-          </form>
-        </div>
+      <div class="col" id="welcomeImgDiv">
+        <img src="/img/logo.png" id="welcomeImg" alt="">
       </div>
-        <div class="col">
-          <h2>Register</h2>
-          <form action="/users" method="post">
-            <label for="firstname"> Firstname </label>
-            <input type="text" name="firstname" class="form-control" id="firstname" />
-            <br /><br />
-          <label for="lastname"> Lastname </label>
-          <input type="text" name="lastname" class="form-control" id="lastname" />
-          <br /><br />
-          <label for="username"> Username </label>
-          <input type="text" name="username" class="form-control" id="username" />
-          <br /><br />
-          <label for="email"> Email </label>
-          <input type="text" name="email" class="form-control" id="email" />
-          <br /><br />
-          <label for="password"> Password </label>
-          <input type="password" name="password" class="form-control" id="password" />
-          <br /><br />
-          <button type="submit" class="btn btn-success" name="register">Register</button>
-        </form>
+      <div class="col d-flex flex-column align-items-start ps-5" id="welcomeModals">
+        <div>
+          <h1 class="welcomeTitle fw-bold">Lo que está pasando ahora</h1>
+        </div>
+        <h3 class="text-white">Unete a Twitter hoy mismo.</h3>
+        <button class="btn btn-primary rounded-pill px-5 border border-primary border-4 fw-bold" id="buttonRegisterModal">Registrate Gratis</button>
+        <br><br>
+        
+        <h3 class="text-white">¿Ya tienes una cuenta?</h3>
+        <button class="btn btn-primary-70 rounded-pill px-5 border border-primary border-4 fw-bold text-white" id="buttonLoginModal">Ingresar</button>
       </div>
     </div>
   </div>
@@ -57,7 +94,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="/js/app"></script>
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
